Footer update, z-index fix

--- a/themes/libfl/css/libfl.css
+++ b/themes/libfl/css/libfl.css
@@ -100,7 +100,6 @@ a:hover {
     margin: 0;
 }
 nav {
-    z-index: 9999;
     position: relative;
 }
 input, textarea {
